add testcase to readme

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       let change = []
       return change
     }
+    // case #1
     test('getChange(1,1) should equal [] - an empty array', function(assert) {
       var result = getChange(1, 1); //no change/coins just an empty array
       var expected = [];
