--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Vending Machine Change Calculator TDD Tutorial</title>
-
-  <!-- Load the QUnit CSS file from CDN - Require to display our tests attractively -->
   <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-1.18.0.css">
-
-  <!-- Pure CSS is a minimalist CSS file we have included to make things look nicer -->
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 </head>
 
@@ -16,11 +12,8 @@
     <h1>Vending Machine <em>Change Calculator</em></h1>
     <h2>Calculate the change (<em>coins</em>) to return to a customer when they buy something.</h2>
   </div>
-
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-
-  <!-- Load the QUnit Testing Framework from CDN - this is the important bit ... -->
   <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
 
   <script>
@@ -28,12 +21,12 @@
       let change = []
       return change
     }
-    // case #1
+    // case #1 totalPayable = 1, cashPaid = 1 shoud return []
     test('getChange(1,1) should equal [] - an empty array', function(assert) {
-      var result = getChange(1, 1); //no change/coins just an empty array
+      var result = getChange(1, 1);
       var expected = [];
       assert.deepEqual(result, expected);
-    }); // use deepEqual for arrays see: https://api.qunitjs.com/deepEqual/
+    });
   </script>
 </body>
 
