--- a/index.html
+++ b/index.html
@@ -24,18 +24,12 @@
       
       let totalChange = cashPaid - totalPayable
       while (totalChange > 0) {
-        if (totalChange >= coins[0]) {
-          change.push(coins[0])
-          totalChange -= coins[0]
-        } else if (totalChange >= coins[1]) {
-          change.push(coins[1])
-          totalChange -= coins[1]
-        } else if (totalChange >= coins[2]) {
-          change.push(coins[2])
-          totalChange -= coins[2]
-        } else if (totalChange >= coins[3]) {
-          change.push(coins[3])
-          totalChange -= coins[3]
+        for (let c of coins) {
+          if (totalChange >= c) {
+            change.push(c)
+            totalChange -= c
+            break
+          }
         }
       }
       return change
