--- a/index.html
+++ b/index.html
@@ -15,61 +15,9 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-1.18.0.js"></script>
-
-  <script>
-    function getChange (totalPayable, cashPaid) {
-      const coins = [10, 5, 2, 1]
-      let change = []
-      if (totalPayable === cashPaid) return []
-      
-      let totalChange = cashPaid - totalPayable
-      while (totalChange > 0) {
-        for (let c of coins) {
-          if (totalChange >= c) {
-            change.push(c)
-            totalChange -= c
-            break
-          }
-        }
-      }
-      return change
-    }
-
-    // case #1
-    test('ราคา 1 บาท จ่ายเงิน 1 บาท เงินทอนต้องได้ []', function(assert) {
-      const result = getChange(1, 1)
-      const expected = []
-      assert.deepEqual(result, expected)
-    })
-
-    // case #2
-    test('ราคา 3 บาท จ่ายเงิน 4 บาท ต้องได้เงินทอน [1]', function(assert) {
-      const result = getChange(3, 4)
-      const expected = [1]
-      assert.deepEqual(result, expected)
-    })
-
-    // case #3
-    test('ราคา 3 บาท จ่ายเงิน 5 บาท ต้องได้เงินทอน [2]', function(assert) {
-      const result = getChange(3, 5)
-      const expected = [2]
-      assert.deepEqual(result, expected)
-    })
-
-    // case #4
-    test('ราคา 3 บาท จ่ายเงิน 6 บาท ต้องได้เงินทอน [2,1]', function(assert) {
-      const result = getChange(3, 6)
-      const expected = [2, 1]
-      assert.deepEqual(result, expected)
-    })
-
-    // case #5
-    test('ราคา 2 บาท จ่ายเงิน 20 บาท ต้องได้เงินทอน [10, 5, 2 ,1]', function(assert) {
-      const result = getChange(2, 20)
-      const expected = [10, 5, 2 ,1]
-      assert.deepEqual(result, expected)
-    })
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/blanket.js/1.1.4/blanket.js"></script>
+  <script src="/change.js" data-cover></script>
+  <script src="/test.js"></script>
 </body>
 
 </html>
